# stm32-gcc-baremetal

./: .gitignore  CMakeLists.txt  README.md  STM32L476xx.ld  gpio_config.c  interrupt.c  interrupt.h  main.c  system_Device.c
CMSIS/Device/ST/STM32L4xx/Config/: stm32l476xx_gcc.ld  stm32l4xx_gcc.ld
CMSIS/Device/ST/STM32L4xx/Source/gcc/: startup_Device.c  startup_stm32l4xx.c
User/: CMakeLists.txt  main.c
User/common/: CMakeLists.txt
User/common/include/: common_config.h
User/common/source/: common_clock_config.c  common_gpio_config.c  common_isr.c  common_uart_config.c
User/demo_1/: CMakeLists.txt  README.md
User/demo_1/include/: demo_1_config.h
User/demo_1/source/: demo_1_enter.c  demo_1_gpio_config.c  demo_1_isr.c
User/demo_2/: CMakeLists.txt  README.md
User/demo_2/include/: demo_2_config.h
User/demo_2/source/: demo_2_dac_config.c  demo_2_dma_config.c  demo_2_enter.c  demo_2_gpio_config.c  demo_2_isr.c  demo_2_timer_config.c  demo_2_util.c
User/demo_3/: CMakeLists.txt  README.md
User/demo_3/include/: demo_3_config.h
User/demo_3/source/: demo_3_enter.c  demo_3_gpio_config.c  demo_3_isr.c  demo_3_usart_config.c
User/demo_4/: CMakeLists.txt
User/demo_4/include/: demo_4_config.h
User/demo_4/source/: README.md  demo_4_enter.c  demo_4_gpio_config.c  demo_4_isr.c  demo_4_usart_config.c
User/demo_common/: CMakeLists.txt
User/demo_common/include/: demo_common_config.h
User/demo_common/source/: crt0.S  demo_common_clock_config.c  demo_common_gpio_config.c  demo_common_isr.c  demo_common_uart_config.c  demo_common_usart_config.c  syscalls.c
User/include/: uart_config.h
User/source/: clock_config.c  gpio_config.c  interrupt.c  main.c  syscalls.c  uart_config.c
